fix: core input group alignments

--- a/packages/core/src/input/input-group.element.scss
+++ b/packages/core/src/input/input-group.element.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -9,7 +9,7 @@
 }
 
 :host([control-width='shrink']) {
-  width: auto;
+  width: fit-content;
 }
 
 ::slotted([slot='controls']) {
